# python-for-scientists

./: .gitignore  Intro.md  README.md  demoodle.py  flake8.ini  iterate.sh  output.py  pyproject.toml  quiz.py  requirements.txt  result.py  result_pd.py  shell.nix
nix/: default.nix  sources.json
